[gd_scene load_steps=8 format=3 uid="uid://b1tyn6bksmmdw"]

[ext_resource type="Script" path="res://scripts/controllers/quiz_controller.gd" id="1_17yh2"]
[ext_resource type="Resource" uid="uid://cbopk7pt528nf" path="res://resources/themes/theme_mar.tres" id="2_e8tlo"]
[ext_resource type="Texture2D" uid="uid://dcp8roo1gojwy" path="res://art folder/menu/minigame-blue.png" id="3_f6rgi"]

[sub_resource type="SystemFont" id="SystemFont_4uqyx"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abvrr"]
bg_color = Color(0.831373, 0.952941, 0.952941, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="SystemFont" id="SystemFont_mkc7w"]
font_weight = 500

[sub_resource type="SystemFont" id="SystemFont_xfl7o"]
font_names = PackedStringArray("Impact")

[node name="QuizMapa1" type="Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17yh2")
quiz = ExtResource("2_e8tlo")
success_color = Color(0, 0.705863, 1.15514e-06, 1)
failed_color = Color(0.787542, 4.16331e-06, 5.77569e-07, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.443137)

[node name="Container" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 125
theme_override_constants/margin_bottom = 75

[node name="QuizBox" type="NinePatchRect" parent="Container"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_f6rgi")
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Title" type="Label" parent="Container/QuizBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 9.0
offset_bottom = 136.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_4uqyx")
theme_override_font_sizes/font_size = 50
text = "Hora do Quiz
Cadeia Alimentar !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Container/QuizBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.587
anchor_right = 0.503
anchor_bottom = 0.587
offset_left = -360.774
offset_top = -138.63
offset_right = 358.678
offset_bottom = 179.37
theme_override_styles/panel = SubResource("StyleBoxFlat_abvrr")

[node name="QuestionBox" type="MarginContainer" parent="Container/QuizBox"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.62
anchor_right = 0.501
anchor_bottom = 0.62
offset_left = -360.774
offset_top = -154.8
offset_right = 360.226
offset_bottom = 163.2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VContainer" type="VBoxContainer" parent="Container/QuizBox/QuestionBox"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="Question" type="Label" parent="Container/QuizBox/QuestionBox/VContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_mkc7w")
theme_override_font_sizes/font_size = 25
clip_text = true
uppercase = true

[node name="Options" type="VBoxContainer" parent="Container/QuizBox/QuestionBox/VContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Option" type="Button" parent="Container/QuizBox/QuestionBox/VContainer/Options"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_xfl7o")

[node name="Option2" type="Button" parent="Container/QuizBox/QuestionBox/VContainer/Options"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_xfl7o")

[node name="Option3" type="Button" parent="Container/QuizBox/QuestionBox/VContainer/Options"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_xfl7o")

[node name="Option4" type="Button" parent="Container/QuizBox/QuestionBox/VContainer/Options"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_xfl7o")

[node name="ContinueButton" type="Button" parent="Container/QuizBox"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "continue"

[node name="EndedQuiz" type="NinePatchRect" parent="Container"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_f6rgi")
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Title" type="Label" parent="Container/EndedQuiz"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_4uqyx")
theme_override_font_sizes/font_size = 50
text = "Fim das Perguntas
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
uppercase = true

[node name="Points" type="Label" parent="Container/EndedQuiz"]
layout_mode = 0
offset_left = 3.0
offset_top = 137.0
offset_right = 776.0
offset_bottom = 373.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
uppercase = true
